<resources>
    <string name="app_name">MovieLife</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="popular_esta_semana">Popular esta semana</string>
    <string name="resultados_para">"Resultados para: "</string>
    <string name="no_hay_plataformas">No hay plataformas disponibles para esta película.</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="puntuacion">Puntuación</string>
    <string name="ver_en">Ver en</string>
    <string name="reparto">Reparto</string>
    <string name="titanic">TITANIC</string>
    <string name="brad_pitt">Brad Pitt</string>
    <string name="biografia">Biografía</string>
    <string name="no_existe_informacion">No existe información</string>
    <string name="peliculas">Películas</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="series">Series</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_web_client_id">868618992281-dvp0ukj76l711rs6d4nm608ok03glt0b.apps.googleusercontent.com</string>
    <string name="watchlist">Watchlist</string>
    <string name="publicar">Publicar</string>
    <string name="todo">TODO</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="iniciar_con_google">Iniciar con Google</string>
    <string name="no_tienes_cuenta_registrate">¿No tienes cuenta? Regístrate</string>
    <string name="entrar">Entrar</string>
    <string name="contrasena">Contraseña</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="repita_la_contrasena">Repita la contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="volver_al_login">Volver al login</string>
    <string name="movie_life">MOVIE LIFE</string>
    <string name="movielife">MOVIELIFE</string>
    <string name="username">username</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="elige_tu_nombre_de_usuario_y_foto_de_perfil">Elige tu nombre de usuario y foto de perfil</string>
    <string name="imagen_de_perfil">Imagen de perfil</string>
    <string name="comentarios">Comentarios</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="buscar">Buscar</string>
</resources>