<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_movies"
            android:title="@string/peliculas"
            android:icon="@drawable/pelicula" />
        <item
            android:id="@+id/nav_series"
            android:title="@string/series"
            android:icon="@drawable/serie" />

        <item
            android:id="@+id/nav_watchlist"
            android:title="@string/watchlist"
            android:icon="@drawable/watchlist" />

        <item
            android:id="@+id/nav_profile"
            android:title="@string/mi_perfil"
            android:icon="@drawable/user" />

    </group>
</menu>