<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.movielife.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_movies"
        android:name="com.example.movielife.ui.movies.MoviesFragment"
        android:label="@string/peliculas"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/nav_series"
        android:name="com.example.movielife.ui.series.SeriesFragment"
        android:label="@string/series"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/nav_watchlist"
        android:name="com.example.movielife.ui.watchlist.WatchlistFragment"
        android:label="@string/watchlist"
        tools:layout="@layout/fragment_watchlist" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.movielife.ui.search.SearchFragment"
        android:label="@string/buscar"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.movielife.ui.profile.ProfileFragment"
        android:label="@string/mi_perfil"
        tools:layout="@layout/fragment_profile" />

</navigation>