<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/fondoregist"
    android:orientation="vertical"
    android:padding="32dp">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/title_stroke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hollywood"
            android:letterSpacing="0.05"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="8"
            android:text="@string/movielife"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="70sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hollywood"
            android:letterSpacing="0.05"
            android:text="@string/movielife"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="70sp"
            android:textStyle="bold" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress"
            android:padding="16dp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:padding="16dp" />

        <EditText
            android:id="@+id/passwordInput2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/repita_la_contrasena"
            android:inputType="textPassword"
            android:padding="16dp" />

        <Button
            android:id="@+id/btnRegist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/green_principal_light"
            android:text="@string/registrarse"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/gris" />

        <TextView
            android:id="@+id/goToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="48dp"
            android:text="@string/volver_al_login"
            android:textColor="@color/green_secondary" />
    </LinearLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="TODO"
        android:src="@drawable/logo_minimalist"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
