<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_secondary">

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="50dp">

            <ImageView
                android:id="@+id/imgPerfil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/imagen_de_perfil"
                android:src="@drawable/image_not_found"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="italic" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="16dp">

                    <TextView
                        android:id="@+id/tvPeliculasCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="35"
                        android:textSize="20sp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/tvPeliculas"
                        android:textSize="18sp"
                        android:text="@string/peliculas"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvSeriesCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="13"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvSeries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/series"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnSeguir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Seguir"
            android:layout_gravity="center_vertical"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/series"
        app:tabIndicatorColor="@color/green_principal"
        app:tabIndicatorHeight="3dp"
        app:tabSelectedTextColor="@color/green_principal"
        app:tabTextColor="@color/green_principal_grey"
        android:backgroundTint="@color/green_secondary"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
